--- a/code/css/variables.css
+++ b/code/css/variables.css
@@ -24,5 +24,7 @@
      --navyEmphasis: navy;
 
      --gradientLight: #0064d9;
+     --gradientLight: #10b4e6;
      --gradientDark: #11428c;
+     --gradientDark: #022a69;
 }
