--- a/code/css/comp.css
+++ b/code/css/comp.css
@@ -43,7 +43,7 @@ body {
      overflow: hidden;
      z-index: 999;
 }
-.cs-logo { position: absolute; left: 1em; top: .4em; height: 1.7rem; width: 1.7rem; z-index: 1000; cursor: pointer; }
+.cs-logo { position: fixed; left: 1em; top: .4em; height: 1.7rem; width: 1.7rem; z-index: 1000; cursor: pointer; }
 .cs-logoTitle { display: inline-block; position: relative; left: 1.9em; cursor: pointer; }
 
 .cs-title {
