--- a/code/css/html.css
+++ b/code/css/html.css
@@ -32,6 +32,17 @@ p { font-size: 1.06rem; }
 .cs-h2 { width: 90%; height: 10%; margin: auto; text-align: center; }
 
 .cs-qrText { width: 50%; margin-left: auto; margin-right: auto; bottom: 0; font-size: .8rem; text-align: center; }
+.cs-twfLink {
+     font-size: 1rem;
+     color: navajowhite;
+     background-color: #ba0e0e;
+     padding: .5em;
+     border-radius: 6px;
+     text-decoration: none;
+     cursor: pointer;
+     z-index: 10;
+}
+.cs-twfLink:hover { background-color: #706f6f; color: white; }
 
 .cs-GodLovesYou { width: 80%; margin-left: auto; margin-right: auto; bottom: 0; font-size: .8rem; color: var(--whiteText); text-align: center; }
 .cs-GodLovesYouPages { color: var(--blackText); }
@@ -83,7 +94,7 @@ p { font-size: 1.06rem; }
 .cs-arrowUp { display: none; position: fixed; bottom: 0; left: 50%; transform: translateY(-50%); height: auto;  width: auto; border-radius: 6px; cursor: pointer; font-size: 1.3em; padding: 0; text-decoration: none; background-color: #c8e2f7; }
 
 .cs-emphasis { color: var(--lighterMaroonEmphasis); }
-
+.cs-unknown { color: #858282; font-weight: 400; }
 table { border-collapse: collapse; width: 100%; }
 th, td { border: 1px solid black; padding: .2em; text-align: left; }
 th { background-color: var(--bannerBackground); color: var(--whiteText)}
