--- a/code/css/index.css
+++ b/code/css/index.css
@@ -27,7 +27,7 @@ body {
      z-index: 999;
 }
 
-.cs-logo { position: absolute; left: 1em; top: .4em; height: 1.7rem; width: 1.7rem; z-index: 1000; cursor: pointer; }
+.cs-logo { position: fixed; left: 1em; top: .4em; height: 1.7rem; width: 1.7rem; z-index: 1000; cursor: pointer; }
 .cs-logoTitle { display: inline-block; position: relative; left: 2em; cursor: pointer; }
 
 .cs-title {
@@ -311,7 +311,7 @@ body {
      height: max-content;
      width: 100%;
      padding-bottom: 2em;
-     background: linear-gradient(180deg, var(--gradientLight) 0%, var(--gradientDark) 100%);
+     background: linear-gradient(180deg, var(--gradientLight) 20%, var(--gradientDark) 90%);
      z-index: 5;
 }
 
@@ -496,7 +496,7 @@ body {
      margin: auto;
      font-size: 1.2em;
      background-color: #ba0e0e;
-     color: white;
+     color: navajowhite;
      border-radius: 6px;
      padding: .8em;
 }
@@ -585,7 +585,7 @@ body {
      height: 2em;
      width: 20em;
      background-color: #ba0e0e;
-     color: white;
+     color: navajowhite;
      border-radius: 6px;
      margin: auto;
      justify-content: center;
