Update TWF & html

--- a/code/css/index.css
+++ b/code/css/index.css
@@ -585,7 +585,7 @@ body {
      height: 2em;
      width: 20em;
      background-color: #ba0e0e;
-     color: navajowhite;
+     color: #fee9c9;
      border-radius: 6px;
      margin: auto;
      justify-content: center;
