--- a/code/css/variables.css
+++ b/code/css/variables.css
@@ -22,7 +22,7 @@
      --paleMaroonEmphasis: #f85e5e;
      --maroonEmphasis: #530306;
      --navyEmphasis: navy;
-
+     --redEmphasis: #7f0000;
      --gradientLight: #0064d9;
      --gradientLight: #10b4e6;
      --gradientDark: #11428c;
