--- a/code/css/html.css
+++ b/code/css/html.css
@@ -6,10 +6,12 @@ body { background-color: var(--bodyBackground); color: var(--blackText); z-index
 p { font-size: 1.06rem; }
 
 .cs-pagesBody { background-color: var(--mainBackground); }
-.cs-page { text-align: justify; margin: auto; margin-top: 3em; width: 80%; }
+.cs-page { text-align: justify; margin: auto; width: 80%; }
 
+.cs-imgBanner { position: relative; top: 0; left: 0; height: 4em; width: 100%; z-index: 1010;}
+.cs-imgLogo { position: absolute; top: -.15em; left: .5em; z-index: 1011; }
 .cs-iconA { cursor: pointer; }
-.cs-iconLink { float: left; width: 7%; margin-right: 1em; height: auto; border-radius: 8px; padding-top: .3em; padding-bottom: .3em; }
+.cs-iconLink { float: left; margin-top: .3em; width: 1.6em; height: auto; border-radius: 50%; padding: .3em; }
 .cs-iconLink:hover { background-color: #eeeea5; }
 .cs-iconLinkQR { font-weight: 550; font-size: 1.5rem; cursor: pointer; }
 
@@ -29,8 +31,7 @@ p { font-size: 1.06rem; }
 .cs-movieCollection { color: var(--lightMaroonEmphasis); font-size: 1.1em; text-decoration: none; }
 
 .cs-qrcode { display: block; position: relative; top: 50%; height: 192px; width: 192px; margin: auto; cursor: pointer; }
-.cs-h2 { width: 90%; height: 10%; margin: auto; text-align: center; }
-
+.cs-h2 { width: 90%; height: 10%; margin: auto; text-align: center; color: var(--greenEmphasis); }
 .cs-qrText { width: 50%; margin-left: auto; margin-right: auto; bottom: 0; font-size: .8rem; text-align: center; }
 .cs-twfLink {
      font-size: 1rem;
@@ -85,7 +86,7 @@ p { font-size: 1.06rem; }
 .cs-underline { text-decoration: underline; font-size: 1em; }
 .cs-underlineLink { color: #157215;  text-decoration: underline; cursor: pointer; }
 
-.cs-title { display: inline-block; font-size: 1.2; font-weight: 550; padding-bottom: .5em; }
+.cs-title { display: inline-block; font-size: 1.2; font-weight: 550; padding-bottom: .5em; color: var(--redEmphasis); }
 
 .cs-alphLine { justify-content: space-between; width: 80%; margin: auto; }
 .cs-alph { height: auto; width: 100%; background-color: aquamarine; border-radius: 6px; padding: 1em; }
